# uncompressor

./: LICENSE  README.md  pyproject.toml
tests/: test_uncompressor.py
tests/archives/: extension.py  something.tar  something.tar.bz2  something.tar.xz  unpack.py
uncompressor/: Compressed.py  compressed.py  main.py  uncompress.py
